--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'java'
-apply plugin: 'application'
-maneClassName = "ru.stqa.pft.sandbox.MyFirstProgram"
+
 
 repositories {
     mavenCentral()
@@ -8,4 +7,6 @@ repositories {
 
 dependencies {
     compile 'org.testng:testng:6.10'
+    compile 'org.seleniumhq.selenium:selenium-java:2.48.2'
+
 }
